<resources>
    <string name="app_name">Shield</string>

    <string name="city_name">City Name</string>
    <string name="block_name">Block Name</string>
    <string name="complex_name">Complex Name</string>
    <string name="next">Next</string>
    <string name="flat_no">Flat Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_registration_number">Enter registered email/mobile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_tenant_phone">Enter Tenant Phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="back">Back</string>
    <string name="otp_send">OTP Has been sent to you on</string>
    <string name="help">Help</string>
    <string name="app_tour">App Tour</string>
    <string name="activity">Activity</string>
    <string name="community">Community</string>
     <string name="invitation">Invitation</string>
    <string name="no_body">If nobody responds to the notification.</string>
    <string name="no_body_pick_up">If nobody pick up the call.</string>
    <string name="phone_Call">Then a phone call will be triggered on this given number.</string>
    <string name="phone_Call_guard">Then the guard can call you at your Register Number.</string>
    <string name="setting">Settings</string>
    <string name="my_details">MY DETAILS</string>
    <string name="app_details">APP SETTINGS</string>
    <string name="my_family">MY FAMILY</string>
    <string name="my_staff">My Staff</string>
    <string name="my_daily_help">MY DAILY HELP</string>
    <string name="my_car">MY VEHICLE</string>
    <string name="my_frequent_guest">MY FREQUENT GUEST</string>
    <string name="my_complex_caps">MY COMPLEX</string>
    <string name="add">ADD</string>
    <string name="loading">wait loading</string>
    <string name="security">Security</string>
    <string name="enter_com">E-interfone settings</string>
    <string name="app_notification">App notification settings</string>
    <string name="my_complex">My complex</string>
    <string name="about">About us</string>
    <string name="contact">Contact us</string>
    <string name="logout">Logout</string>
    <string name="profile_info">PROFILE INFO</string>
    <string name="member_info">MEMBER INFO</string>
    <string name="staff_info">STAFF INFO</string>
    <string name="car_info">VEHICLE INFO</string>
    <string name="tenants_info">Tenant Info</string>
    <string name="save">Save</string>
    <string name="staff_name">Enter Staff Name</string>
    <string name="staff_type">Choose Staff Type</string>
    <string name="enter_member_name">Enter Member Name</string>
    <string name="enter_tenant_name">Enter Tenant Name</string>
    <string name="entercar_no">Enter 4-digit Car Number</string>
    <string name="cartype">Choose Car Type</string>
    <string name="parking_number">Enter Parking Number</string>
    <string name="set_noti">Set Your notification</string>
    <string name="manage_notification">Manage Notification</string>
    <string name="notification_staff">Notification on Staff\'s Entry and Exit</string>
    <string name="notification_guest">Notification on Guest\'s Entry and Exit</string>
    <string name="notification_cab">Notification on Cab\'s Entry and Exit</string>
    <string name="notification_car">Notification on Car\'s Entry and Exit</string>
    <string name="notification_delivery">Notification on Delivery\'s Entry and Exit</string>
    <string name="search">Search Visitor</string>
    <string name="all">ALL</string>
    <string name="support">:suppoprt@cartface.com</string>
    <string name="text_contact">Cartface Technologies Pvt. Ltd.\n50 ,D.H.Road,kolkata-700104 </string>
    <string name="text_contact1">Cartface Technologies Pvt. Ltd.50 ,D.H.Road,kolkata-700104 </string>
    <string name="upcoming">UPCOMING</string>
    <string name="send">Send</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="inbox">Inbox</string>
    <string name="visitor">Visitor</string>
    <string name="call_visitor">Call Visitor</string>
    <string name="call_security">Call Security</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="car_detials">Cab Details</string>
    <string name="medical">Medical\nEmergency</string>
    <string name="type_message">Type Your message</string>
    <string name="billed">Billed(+)</string>
    <string name="receipt">Receipt(-)</string>
    <string name="Due">Due(=)</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="leave_at_gate">Leave at Gate</string>
     <string name="urban_clap">Urban Clap</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="current_status">Current Status</string>
     <string name="delivery_boy">Delivery Boy</string>
    <string name="default_notification_channel_id">1</string>
    <string name="notification_on_help">Notification on help</string>
    <string name="add_show_tenent">Add / Show Tenant</string>
    <string name="add_new_flat">Add new flat/ Complex</string>
    <string name="tell_a_freind">Tell a friend about Shield</string>
    <string name="cab_dialog_msg">Approve my cab in given date and time</string>
    <string name="delivery_dialog_msg">Approve my delivery boy in given date and time</string>
    <string name="flat_owner">Flat Owner</string>
    <string name="tenant">Tenant</string>
    <string name="submit">Submit</string>
    <string name="secure_phone_msg">Connect with other Residents</string>
    <string name="from_contact">Get from contact</string>
    <string name="enter_call_setting">Intercom Call Setup</string>
    <string name="call_through_ivr">Call on your phone through IVR when visitor a the gate.</string>
    <string name="visitor_at_gate">When the visitor at the gate\n<b>First you will get mobile verification</b></string>
    <string name="send_notification">Send Test Notification</string>
    <string name="nobody_response">If nobody responds to the notification\n<b>Phone call will be triggered through IVR.</b></string>
     <string name="get_call">Get a test call</string>
     <string name="if_call_picked">If Call not picks up\n<b>Then the guard may find another way to reach you</b></string>
    <string name="avoid_call">You can avoid intercom call by approving visitor in advance</string>
    <string name="entry_exit_notificationi">Entry, Exit Notifications</string>
    <string name="daily_help"><b>Daily Help</b>\nMaid, Cook, Driver etc.</string>
    <string name="entry_notification">Entry Notification</string>
    <string name="exit_notification">Exit Notification</string>
    <string name="guest">Guest</string>
    <string name="delivery">Delivery</string>
    <string name="cab">Cab</string>
    <string name="help_others">Help and Others</string>
    <string name="no_push_notification">Not receiving push notification?\nPlease check your<a href="http://www.google.com">Phone Setting and app permission</a>\n(May some other apps can restrict notifications ) </string>


    <string name="noti_msg_1">Not receiving push notification or in app call?</string>
    <string name="noti_msg_2">Please check your phone </string>
    <string name="noti_msg_3">settings and app permissions.</string>
    <string name="noti_msg_4">(May some other apps can restrict notifications)</string>


    <string name="about_us_text">SHIELD is an easy to understand security app/platform that is intelligent, efficient and affordable. It is a realistic and reasonable app that can be used in residential complexes, private security agencies, corporate companies, hospitals and educational institutions.</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="add_new">Add New</string>

</resources>
