<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/curve_white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_info"
            android:textStyle="bold"
            android:textSize="20dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:id="@+id/edit_staff_name"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_member_name"/>

        <Spinner
            android:id="@+id/spinner_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/SpinnerwithNoArrow"
            android:layout_marginTop="10dp"
            android:hint="@string/staff_type"/>
        <EditText
            android:id="@+id/edit_staff_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_phone"/>

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:paddingBottom="10dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:text="@string/save"
                android:background="@drawable/curve_add"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
