<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_login">

    <RelativeLayout
        android:id="@+id/rel_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:text="@string/back"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/button_blue"/>

    </RelativeLayout>


    <RelativeLayout
        android:background="@drawable/bg_trnns_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:backgroundTint="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:hint="@string/enter_name"/>

        <EditText
            android:id="@+id/edt_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edt_name"
            android:backgroundTint="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/enter_phone"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edt_phone_no"
            android:backgroundTint="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"/>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radioOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flat_owner"
                android:textColor="@color/black"
                android:checked="true"
                android:buttonTint="@color/black"
                />

            <RadioButton
                android:id="@+id/radioTenant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tenant"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                />

        </RadioGroup>

        <RelativeLayout
            android:layout_below="@+id/radioGroup"
            android:gravity="center"
            android:id="@+id/rel_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/next"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_blue"/>

        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rel_login"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_height="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_buttom"/>

    </RelativeLayout>


</RelativeLayout>
