<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="vertical"
        android:background="@drawable/curve_white">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_edit"
                    android:layout_width="91dp"
                    android:layout_height="101dp"
                    android:src="@drawable/ic_user"
                    android:tint="@color/light_gray" />

            </FrameLayout>

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_marginLeft="-40dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="right|center"/>

        </LinearLayout>




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edit_name"
            android:layout_marginVertical="10dp"
            android:hint="@string/enter_name"/>
        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:hint="@string/enter_phone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edit_mail"
            android:layout_marginVertical="10dp"
            android:hint="@string/enter_email"/>

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:paddingBottom="10dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:text="@string/save"
                android:background="@drawable/curve_add"/>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
