<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background">
    <RelativeLayout
        android:id="@+id/rel_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:text="@string/back"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:gravity="center"

            android:background="@drawable/next_curve"/>


    </RelativeLayout>


    <RelativeLayout
        android:background="@drawable/background_trnaparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:alpha="0.5"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:backgroundTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/enter_name"/>
        <EditText
            android:id="@+id/edt_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edt_name"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/enter_phone"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edt_phone_no"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/enter_email"/>

        <RelativeLayout
            android:layout_below="@+id/edt_email"
            android:gravity="center"
            android:id="@+id/rel_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/next"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/next_curve"/>


        </RelativeLayout>




    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_login"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_height="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_buttom"/>



    </RelativeLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:visibility="gone"
        app:indicatorName="BallPulseSyncIndicator"
        app:indicatorColor="@color/blue"
        />

</RelativeLayout>
