<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/curve_white"
        android:padding="@dimen/dimen_15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_info"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tint="@color/light_gray"
                    android:id="@+id/image_member"
                    android:src="@drawable/ic_user_black"/>

            </FrameLayout>

            <ImageView
                android:id="@+id/img_edit_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edit_name"
            android:textSize="13sp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:hint="@string/enter_member_name"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:hint="@string/enter_phone"/>

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:paddingBottom="10dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:text="@string/save"
                android:background="@drawable/curve_add"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
