<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/curve_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_info"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <RelativeLayout
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:tint="@color/light_gray"
                    android:src="@mipmap/car"/>

            </FrameLayout>

            <ImageView
                android:id="@+id/edit_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                />

        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
             android:id="@+id/edit_car_no"
            android:textSize="13sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:hint="@string/entercar_no"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:id="@+id/edit_parking_no"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:hint="@string/parking_number"/>

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:paddingBottom="10dp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:text="@string/save"
                android:background="@drawable/curve_add"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
